# go/internal/openapi/api/openapi.yaml
@@ -1214,9 +1214,8 @@ components:
           format: date-time
           type: string
       required:
-      - chain
-      - filterTypes
-      - network
+      - eventTypes
+      - id
       - url
       type: object
     ListResponse_EndpointOut_:
